--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,7 @@
     "version": 2,
     "functions": {
       "api/*.js": {
-        "runtime": "nodejs20.x",
-        "memory": 256,
-        "maxDuration": 10
+        "runtime": "@vercel/node@20.x"
       }
     }
-}
+  }
