--- a/package.json
+++ b/package.json
@@ -1,10 +1,5 @@
 {
     "name": "lusha-proxy",
     "version": "1.0.0",
-    "private": true,
-    "type": "module",
-    "engines": {
-      "node": ">=18.0.0"
-    },
-    "dependencies": {}
+    "type": "module"
 }
